--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Nhu-Ngoc DAO's homepage</title>
+  <title>PSHH Laboratory</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template He is the Director of the <a href="ihn">Intelligent Human Networking laboratory</a> at Sejong University. -->
+  <!-- Custom styles for this template -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
 
 </head>
@@ -22,35 +22,44 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Nhu-Ngoc DAO</h1>
-      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="https://publons.com/researcher/1405959/nhu-ngoc-dao/">ResearcherID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56810883300">ScopusID</a>, <a href="https://scholar.google.co.kr/citations?hl=en&user=rWmFrIgAAAAJ&view_op=list_works&sortby=pubdate">GoogleScholar</a>, <a href="https://www.researchgate.net/profile/Nhu_Ngoc_Dao/publications">Researchgate</a>]</p>
+      <h1>PSHH Laboratory</h1>
+      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br></p>
     </div>
   </header>
 
-  <section id="bio" class="bg-light">
+  <section id="research" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>BIOGRAPHY</h5>
-          <p class="lead">Nhu-Ngoc Dao is an Assistant Professor at the Department of Computer Science and Engineering, Sejong University, Seoul, Republic of Korea. He received his M.S. and Ph.D. degrees in computer science at the School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea, in 2016 and 2019, respectively. He received the B.S. degree in electronics and telecommunications from the Posts and Telecommunications Institute of Technology, Hanoi, Viet Nam, in 2009. Prior to joining the Sejong University, he was a postdoc researcher at the Institute of Computer Science, University of Bern, Switzerland from 2019 to 2020. He is an Editor of the Scientific Reports. His research interests include network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things. Dr. Dao is a Senior Member of IEEE. Contact him at nndao@sejong.ac.kr.</p>
+          <h5>INTRODUCTION</h5>
+          <p class="lead">Physical-cyber Systems and Heterogeneous Hypercomputing (PSHH) lab is led by <a href="index">Dr. Nhu-Ngoc Dao</a> at Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications for the aim of intelligent human networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="index">Nhu-Ngoc Dao</a> if you are willing to be a member of our family.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="timeline" class="bg-light">
+  <section id="member" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>PROFESSIONAL TIMELINE</h5>
+          <h5>MEMBERS</h5>
 		  <ul class="lead" style="list-style-type:square">
-			<li><i>03.2020 - present:</i> Assistant professor, Department of Computer Science and Engineering, Sejong University, Seoul, Republic of Korea.</li>
-			<li><i>09.2019 - 02.2020:</i> Postdoc researcher, Institute of Computer Science, University of Bern, Bern, Switzerland.</li>
-			<li><i>07.2019 - 08.2019:</i> Visiting researcher, CDSC Center, University of Newcastle, NSW, Australia.</li>
-			<li><i>03.2016 - 08.2019:</i> Ph.D., School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea.</li>
-			<li><i>03.2014 - 02.2016:</i> M.S., School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea.</li>
-			<li><i>01.2009 - 02.2014:</i> Engineer, Global Telecommunication Corporation, Hanoi, Vietnam.</li>
-			<li><i>09.2004 - 12.2008:</i> B.S., Posts and Telecommunications Institute of Technology, Hanoi, Vietnam.</li>
+			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
+			<li>The Vinh Nguyen (Vietnam), MS student since 9/2021</li>
+		  </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="project" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+          <h5>PROJECTS</h5>
+		  <ul class="lead" style="list-style-type:square">
+			<li>Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, Korean NRF, 03/2021-02/2024.</li>
+			<li>Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, SejongIACF, 03/2020-02/2021.</li>
 		  </ul>
         </div>
       </div>
@@ -97,13 +106,13 @@
 				<li><b>Dao NN</b>, Nguyen TT, Luong MQ, Nguyen-Thanh T, Na W, and Cho S, "Self-calibrated edge computation for unmodeled time-sensitive IoT offloading traffic", <i>IEEE Access</i>, vol. 8, pp. 110316-110323, 2020. [<a href="https://doi.org/10.1109/ACCESS.2020.3001572">IEEE</a>].</li>
 				<li>Lakew DS, Sa'ad U, <b>Dao NN</b>, Na W, and Cho S, "Routing in flying ad hoc networks: A comprehensive survey", <i>IEEE Communications Surveys and Tutorials</i>, vol. 22, no. 2, pp. 1071-1120, 2020. [<a href="https://doi.org/10.1109/COMST.2020.2982452">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Na W, and Cho S, "Mobile cloudization storytelling: Current issues from an optimization perspective", <i>IEEE Internet Computing</i>, vol. 24, no. 1, pp. 39-47, 2020. [<a href="https://doi.org/10.1109/MIC.2020.2965485">IEEE</a>].</li>
-				<li>Na W, <b>Dao NN</b>, Kim J, Ryu ES, and Cho S, "Simulation and measurement: Feasibility study of tactile Internet applications for mmwave virtual reality", <i>Wiley ETRI Journal</i>, vol. 42, no. 2, pp. 163-174, 2020. [<a href="https://doi.org/10.4218/etrij.2019-0284">Wiley</a>].</li>
-				<li><b>Dao NN</b>, Vu DN, Masood A, Na W, and Cho S, "Reliable broadcasting for safety services in dense infrastructureless peer-aware communications", <i>Elsevier Reliability Engineering and System Safety</i>, vol. 193, p. 106655, 2020. [<a href="https://doi.org/10.1016/j.ress.2019.106655">Elsevier</a>].</li>
+				<li>Na W, <b>Dao NN</b>, Kim J, Ryu ES, and Cho S, "Simulation and measurement: Feasibility study of tactile Internet applications for mmwave virtual reality", <i>ETRI Journal</i>, vol. 42, no. 2, pp. 163-174, 2020. [<a href="https://doi.org/10.4218/etrij.2019-0284">Wiley</a>].</li>
+				<li><b>Dao NN</b>, Vu DN, Masood A, Na W, and Cho S, "Reliable broadcasting for safety services in dense infrastructureless peer-aware communications", <i>Reliability Engineering and System Safety</i>, vol. 193, p. 106655, 2020. [<a href="https://doi.org/10.1016/j.ress.2019.106655">Elsevier</a>].</li>
 				<li>Pham HC, <b>Dao NN</b>, Cho S, Nguyen PT, and Pham-Hang AT, "Construction hazard investigation leveraging object anatomization on augmented photoreality platform", <i>Applied Sciences</i>, vol. 9, no. 21, p. 4477, 2019. [<a href="https://doi.org/10.3390/app9214477">MDPI</a>].</li>
 				<li><b>Dao NN</b>, Na W, and Cho S, "IEEE 802.15.8: Infrastructureless peer-aware communications with fully distributed coordination", <i>IEEE Communications Standards Magazine</i>, vol. 3, no. 1, pp. 40-47, 2019. [<a href="https://doi.org/10.1109/MCOMSTD.2019.1800031">IEEE</a>].</li>
 				<li>Na W, Jang S, Lee Y, Park L, <b>Dao NN</b>, and Cho S, "Frequency resource allocation and interference management in mobile edge computing for an Internet of things system", <i>IEEE Internet of Things Journal</i>, vol. 6, no. 3, pp. 4910-4920, 2019. [<a href="https://doi.org/10.1109/JIOT.2018.2885348">IEEE</a>].</li>
-				<li><b>Dao NN</b>, Park M, Kim J, Paek J, and Cho S, "Resource-aware relay selection for inter-cell interference avoidance in 5G heterogeneous network for Internet of things systems", <i>Elsevier Future Generation Computer Systems</i>, vol. 93, pp. 877-887, 2019. [<a href="https://doi.org/10.1016/j.future.2018.03.037">Elsevier</a>].</li>
-				<li>Vu DN, <b>Dao NN</b>, Jang Y, Na W, Kwon YB, Kang H, Jung JJ, and Cho S, "Joint energy and latency optimization for upstream IoT offloading services in fog radio access networks", <i>Wiley Transactions on Emerging Telecommunications Technologies</i>, vol. 30, no. 4, p. e3497, 2019. [<a href="https://doi.org/10.1002/ett.3497">Wiley</a>].</li>
+				<li><b>Dao NN</b>, Park M, Kim J, Paek J, and Cho S, "Resource-aware relay selection for inter-cell interference avoidance in 5G heterogeneous network for Internet of things systems", <i>Future Generation Computer Systems</i>, vol. 93, pp. 877-887, 2019. [<a href="https://doi.org/10.1016/j.future.2018.03.037">Elsevier</a>].</li>
+				<li>Vu DN, <b>Dao NN</b>, Jang Y, Na W, Kwon YB, Kang H, Jung JJ, and Cho S, "Joint energy and latency optimization for upstream IoT offloading services in fog radio access networks", <i>Transactions on Emerging Telecommunications Technologies</i>, vol. 30, no. 4, p. e3497, 2019. [<a href="https://doi.org/10.1002/ett.3497">Wiley</a>].</li>
 				<li><b>Dao NN</b>, Vu DN, Na W, Kim J, and Cho S, "SGCO: Stabilized green crosshaul orchestration for dense IoT offloading services", <i>IEEE Journal on Selected Areas in Communications</i>, vol. 36, no. 11, pp. 2538-2548, 2018. [<a href="https://doi.org/10.1109/JSAC.2018.2874124">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Sa'ad U, Vu VC, Tran QD, Ryu ES, and Cho S, "A softwarized paradigm for mobile virtual networks: Overcoming a lack of access infrastructure", <i>IEEE Vehicular Technology Magazine</i>, vol. 13, no. 4, pp. 106-115, 2018. [<a href="https://doi.org/10.1109/MVT.2018.2866120">IEEE</a>].</li>
 				<li>Na W, Lee Y, <b>Dao NN</b>, Vu DN, Masood A, and Cho S, "Directional link scheduling for real-time data processing in smart manufacturing system", <i>IEEE Internet of Things Journal</i>, vol. 5, no. 5, pp. 3661-3671, 2018. [<a href="https://doi.org/10.1109/JIOT.2018.2865756">IEEE</a>].</li>
@@ -123,6 +132,7 @@
       </div>
     </div>
   </section>
+
 
   <section id="conference" class="bg-light">
     <div class="container">
@@ -171,57 +181,18 @@
     </div>
   </section>
 
-  <section id="others" class="bg-light">
+<!--   <section id="others" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>OTHERS</h5>
+          <h5>AWARDS</h5>
 			  <ul class="lead" style="font-weight: bold;list-style-type:square;">
-				<li>Academic scholarships/awards:
-				  <ul class="lead">
-					<li><i>CAU Alumni Award</i>, awarded by Chung-Ang Graduate Students Union, 2019;</li>
-					<li><i>Visiting Scholarship at CDSC</i>, University of Newcastle, Australia, 7-8/2019;</li>
-					<li><i>Certificate of Merits for outstanding academic and research achievements in Korea</i>, awarded by the Ambassador of Vietnam in Korea, 2019;</li>
-					<li><i>Vietnamese Young Scientists in Korea Award in ICT</i>, jointly awarded by the Science and Technology Office, Embassy of the Socialist Republic of Vietnam in Korea and the Vietnamese Students Association in Korea, 2019;</li>
-					<li><i>Golden Globe Award in ICT</i>, jointly awarded by the Central Committee of Ho Chi Minh Communist Youth Union and the Ministry of Science and Technology, 2018;</li>
-					<li><i>Excellent Vietnamese students in Korea Scholarship</i>, awarded by Hanshin Corp., 2017;</li>
-					<li><i>CAYSS Scholarship for Ph.D. and M.S. courses</i>, awarded by Chung-Ang University, 2014-2017;</li>
-					<li><i>Regular Scholarship</i>, awarded by Posts and Telecommunications Institute of Technology, 2006-2009.</li>
-				  </ul>				
-				</li>
-				<li>Industrial certificates:
-				  <ul class="lead">
-					<li>CCNP (2010), CCNA (2008), and CWNA (2008).</li>
-				  </ul>				
-				</li>
-				<li>Professional activities:
-				  <ul class="lead">
-					<li>Editor: <a href="https://www.nature.com/srep/about/editors#electrical-engineering">Scientific Reports</a>;</li>
-					<li>SI guest editor:
-            <ul class="lead" style="list-style-type: '- '">
-              <li>Wireless Communications and Mobile Computing: <a href="https://www.hindawi.com/journals/wcmc/si/781378/">[1]</a>, <a href="http://downloads.hindawi.com/journals/wcmc/si/193986.pdf">[2]</a></li> 
-              <li>Mobile Information Systems: <a href="https://www.hindawi.com/journals/misy/si/175218/">[1]</a></li>
-              <li>Electronics: <a href="https://www.mdpi.com/journal/electronics/special_issues/UIC_for_B5G_6G">[1]</a></li>
-            </ul>
-          </li>
-					<li>Organizing committee member: <a href="https://doi.org/10.1109/ICOIN50884.2021.9334031">ICOIN2021</a>;</li>
-					<li>TPC member: <a href="https://doi.org/10.1109/Comnetsat50391.2020.9328945">COMNETSAT2020</a>, <a href="https://doi.org/10.1109/ISCIT.2019.8905141">ISCIT2019</a>, <a href="https://doi.org/10.1109/ICECIE47765.2019.8974660">ICECIE2019</a>, <a href="https://doi.org/10.1109/ICOIN.2018.8343069">ICOIN2018</a>;</li>
-					<li>Reviewer: IEEE JSAC, TVT, TCC, TITS, IOTJ, CIM, WCM, ACCESS, COMSTD, Elsevier JNCA, Wiley NEM, Springer WIRE, etc.</li>
-				  </ul>
-				</li>
-				<li>Social activities:
-				  <ul class="lead">
-					<li>Cycling - Korean grand slam, cross country, and 4 rivers trails;</li>
-					<li>Climbing - Jeju Hallasan Mt. trails;</li>
-					<li>Running - Seoul Marathon 03/2019, Brussels Marathon 10/2019, Ljubljana Marathon 10/2019.</li>
-				  </ul>				
-				</li>
 			  </ul>
         </div>
       </div>
     </div>
   </section>
-
+ -->
 
 
 
