--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION</h5>
 			  <ol class="lead">
-				<li>Do DT, Le AT, Xuan Ha ND, and <b>Dao NN</b>, "Physical layer security for Internet of things via reconfigurable intelligent surface", <i>Future Generation Computer Systems</i>. In press. [<a href="">Elsevier</a>].</li>
+				<li>Do DT, Le AT, Xuan Ha ND, and <b>Dao NN</b>, "Physical layer security for Internet of things via reconfigurable intelligent surface", <i>Future Generation Computer Systems</i>. In press. [<a href="https://doi.org/10.1016/j.future.2021.08.012">Elsevier</a>].</li>
 				<li>Nguyen TV, <b>Dao NN</b>, Tuong VD, Noh W, and Cho S, "User-aware and flexible proactive caching using LSTM and ensemble learning in IoT-MEC networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2021.3097768">IEEE</a>].</li>
 				<li>Na W, <b>Dao NN</b>, and Cho S, "Reinforcement-learning-based spatial resource identification for IoT D2D communications", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3087167">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Phan TV, Sa'ad U, Kim J, Bauschert T, Do DT, and Cho S, "Securing heterogeneous IoT with intelligent DDoS attack behavior learning", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3084199">IEEE</a>].</li>
