--- a/nndao.html
+++ b/nndao.html
@@ -77,7 +77,6 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION</h5>
 			  <ol class="lead">
-				<li>Do DT, Le AT, Xuan Ha ND, and <b>Dao NN</b>, "Physical layer security for Internet of things via reconfigurable intelligent surface", <i>Future Generation Computer Systems</i>. In press. [<a href="https://doi.org/10.1016/j.future.2021.08.012">Elsevier</a>].</li>
 				<li>Nguyen TV, <b>Dao NN</b>, Tuong VD, Noh W, and Cho S, "User-aware and flexible proactive caching using LSTM and ensemble learning in IoT-MEC networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2021.3097768">IEEE</a>].</li>
 				<li>Na W, <b>Dao NN</b>, and Cho S, "Reinforcement-learning-based spatial resource identification for IoT D2D communications", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3087167">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Phan TV, Sa'ad U, Kim J, Bauschert T, Do DT, and Cho S, "Securing heterogeneous IoT with intelligent DDoS attack behavior learning", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3084199">IEEE</a>].</li>
@@ -86,6 +85,7 @@
 				<li>Ramasubbareddy S, Ramasamy S, Sahoo KS, Kumar RL, Pham QV, and <b>Dao NN</b>, "CAVMS: Application-aware cloudlet adaption and VM selection framework for multi-cloudlet environment", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2020.3029807">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Ngo DT, Dinh NT, Phan TV, Vo ND, Cho S, and Braun T, "Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2020.3019035">IEEE</a>].</li>
 				<li>Vu DN, <b>Dao NN</b>, Na W, and Cho S, "Dynamic resource orchestration for service capability maximization in fog-enabled connected vehicle networks", <i>IEEE Transactions on Cloud Computing</i>. In press. [<a href="https://doi.org/10.1109/TCC.2020.3001289">IEEE</a>].</li>
+				<li>Do DT, Le AT, Xuan Ha ND, and <b>Dao NN</b>, "Physical layer security for Internet of things via reconfigurable intelligent surface", <i>Future Generation Computer Systems</i>, vol. 126, pp. 330-339, 2022. [<a href="https://doi.org/10.1016/j.future.2021.08.012">Elsevier</a>].</li>
 				<li><b>Dao NN</b>, Pham QV, Tu NH, Thanh TT, Bao VNQ, Lakew DS, and Cho S, "Survey on aerial radio access networks: Toward a comprehensive 6G access infrastructure", <i>IEEE Communications Surveys and Tutorials</i>, vol. 23, no. 2, pp. 1193-1225, 2021. [<a href="https://doi.org/10.1109/COMST.2021.3059644">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Pham QV, Do DT, and Dustdar S, "The sky is the edge - Toward mobile coverage from the sky", <i>IEEE Internet Computing</i>, vol. 25, no. 2, pp. 101-108, 2021. [<a href="https://doi.org/10.1109/MIC.2020.3033976">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Na W, Tran AT, Nguyen DN, and Cho S, "Energy-efficient spectrum sensing for IoT devices", <i>IEEE Systems Journal</i>, vol. 15, no. 1, pp. 1077-1085, 2021. [<a href="https://doi.org/10.1109/JSYST.2020.2986030">IEEE</a>].</li>
