--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>PSHH Laboratory</h1>
-      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br></p>
+      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br><a href="#research">#intro</a><a href="#member">#member</a><a href="#project">#project</a><a href="#chapter">#chapter</a><a href="#journal">#journal</a><a href="#conference">#conference</a><a href="#patent">#patent</a></p>
     </div>
   </header>
 
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>INTRODUCTION</h5>
+          <h5>INTRODUCTION <a href="top-page">&#9776;</a></h5>
           <p class="lead">Privacy-Sensitive Heterogeneous Hypercomputing (PSHH) lab is led by <a href="nndao">Dr. Nhu-Ngoc Dao</a> at Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications for the aim of intelligent human networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="nndao">Nhu-Ngoc Dao</a> if you are willing to be a member of our family.</p>
         </div>
       </div>
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>MEMBERS</h5>
+          <h5>MEMBERS <a href="top-page">&#9776;</a></h5>
 		  <ul class="lead" style="list-style-type:square">
 			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
 			<li>The Vinh Nguyen (Vietnam), MS student since 9/2021</li>
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>PROJECTS</h5>
+          <h5>PROJECTS <a href="top-page">&#9776;</a></h5>
 		  <ul class="lead" style="list-style-type:square">
 			<li>Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, Korean NRF, 03/2021-02/2024.</li>
 			<li>Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, SejongIACF, 03/2020-02/2021.</li>
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>BOOK CHAPTER</h5>
+          <h5>BOOK CHAPTER <a href="top-page">&#9776;</a></h5>
 			  <ol class="lead">
 				<li><b>Dao NN</b>, Dinh NT, Pham QV, Phan TV, Cho S, and Braun T, "Vulnerabilities in fog/edge computing from architectural perspectives", Chapter 8, in <i>Fog/edge computing for security, privacy, and applications</i>, Wu J and Chang W [Eds], Springer, Cham, Switzerland, 2021. [<a href="https://doi.org/10.1007/978-3-030-57328-7_8">Springer</a>].</li>
 				<li><b>Dao NN</b>, Tran QD, Dinh NT, Cho S, and Braun T, "Edge computing architectures", Chapter 2, in <i>Edge computing: Models, technologies and applications</i>, Taheri J and Deng S [Eds], The Institution of Engineering and Technology (IET), London, UK, 2020. [<a href="https://doi.org/10.1049/PBPC033E_ch2">IET</a>].</li>
@@ -84,7 +84,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>JOURNAL PUBLICATION</h5>
+          <h5>JOURNAL PUBLICATION <a href="top-page">&#9776;</a></h5>
 			  <ol class="lead">
 				<li><b>Dao NN</b>, Vu DN, Tran AT, Phan TV, Dustdar S, and Cho S, "On system stability in multitier roadside computing toward an intelligent transportation", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2021.3133283">IEEE</a>].</li>
 				<li>Nguyen TV, <b>Dao NN</b>, Tuong VD, Noh W, and Cho S, "User-aware and flexible proactive caching using LSTM and ensemble learning in IoT-MEC networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2021.3097768">IEEE</a>].</li>
@@ -140,7 +140,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>CONFERENCE PUBLICATION</h5>
+          <h5>CONFERENCE PUBLICATION <a href="top-page">&#9776;</a></h5>
   			  <ol class="lead">
 	  		    <li>Tuong VD, <b>Dao NN</b>, Noh W, Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 1-1, Jeju island, Korea, January 12-15, 2022. [<a href="">IEEE</a>].</li>
  	  		    <li>Le BL, Lam GH, Nguyen XV, Nguyen TM, Duong QL, Tran QD, Do TH, <b>Dao NN</b>, "A deep learning based traffic sign detection for intelligent transportation systems", <i>International Conference on Computational Data and Social Networks (CSoNet)</i>, pp. 129-137, Montreal, Canada, November 15-17, 2021. [<a href="https://doi.org/10.1007/978-3-030-91434-9_12">Springer</a>].</li>
@@ -172,7 +172,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>PATENT</h5>
+          <h5>PATENT <a href="top-page">&#9776;</a></h5>
 			  <ol class="lead">
 				<li>Cho S, Vu DN, and <b>Dao NN</b>, "The method for scheduling tasks in real time using pattern-identification in multitier edge computing and the system thereof", <i>Korean patent KR102068676</i>, January 15, 2020. [<a href="https://doi.org/10.8080/1020180089619?urlappend=en">KIPRIS</a>].</li>
 				<li>Cho S, Vu DN, and <b>Dao NN</b>, "Dynamic resource orchestration for fog-enabled industrial Internet of things networks", <i>Korean patent KR102056894</i>, December 17, 2019. [<a href="https://doi.org/10.8080/1020180088787?urlappend=en">KIPRIS</a>].</li>
