--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>PSHH Laboratory</h1>
-      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br><a href="#research">#intro</a> <a href="#member">#member</a> <a href="#project">#project</a> <a href="#chapter">#chapter</a> <a href="#journal">#journal</a> <a href="#conference">#conference</a> <a href="#patent">#patent</a></p>
+      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="#research">#intro</a>] [<a href="#member">#member</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
     </div>
   </header>
 
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>INTRODUCTION <a href="#page-top">&#9776;</a></h5>
-          <p class="lead">Privacy-Sensitive Heterogeneous Hypercomputing (PSHH) lab is led by <a href="nndao">Dr. Nhu-Ngoc Dao</a> at Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications for the aim of intelligent human networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="nndao">Nhu-Ngoc Dao</a> if you are willing to be a member of our family.</p>
+          <p class="lead">Privacy-Sensitive Heterogeneous Hypercomputing (PSHH) lab is led by <a href="nndao">Dr. Nhu-Ngoc Dao</a> at Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications for the aim of intelligent human networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="nndao">Nhu-Ngoc Dao</a> if you are willing to be a member of our family. Korean and international citizens are all welcome!</p>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
           <h5>MEMBERS <a href="#page-top">&#9776;</a></h5>
 		  <ul class="lead" style="list-style-type:square">
 			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
-			<li>The Vinh Nguyen (Vietnam), MS student since 9/2021</li>
+			<li>The-Vinh Nguyen (Vietnam), MS student since 9/2021</li>
 		  </ul>
         </div>
       </div>
