--- a/nndao.html
+++ b/nndao.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>PUBLICATION</h5>
-			  <p class="lead"> See <a href="index/#chapter">here.</a></p>
+			  <p class="lead"> See <a href="index.html#chapter">here.</a></p>
         </div>
       </div>
     </div>
