--- a/nndao.html
+++ b/nndao.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>PROFESSIONAL ACTIVITIES</h5>
-			  <ul class="lead" style="font-weight: bold;list-style-type:square;">
+				<ul class="lead" style="list-style-type:square">
 					<li>Editor: <a href="https://www.nature.com/srep/about/editors#electrical-engineering">Scientific Reports</a>;</li>
 					<li>SI guest editor:
 						<ul class="lead">
