--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>PSHH Laboratory</h1>
-      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="#research">#intro</a>] [<a href="#member">#member</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
+		<img src="logo.jpeg">
+      <!-- <h1>PSHH Laboratory</h1> -->
+      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="#research">#intro</a>] [<a href="#member">#member</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
     </div>
   </header>
 
