--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-		<img src="logo.jpeg">
+		<img src="logo.png" width="293" height="86">
       <!-- <h1>PSHH Laboratory</h1> -->
       <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="#research">#intro</a>] [<a href="#member">#member</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
     </div>
