--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container text-center">
 		<img src="logo.png" width="293" height="86">
       <!-- <h1>PSHH Laboratory</h1> -->
-      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="#research">#intro</a>] [<a href="#member">#member</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
+      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="#research">#intro</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
     </div>
   </header>
 
@@ -38,7 +38,7 @@
       </div>
     </div>
   </section>
-
+<!-- 
   <section id="member" class="bg-light">
     <div class="container">
       <div class="row">
@@ -52,12 +52,12 @@
       </div>
     </div>
   </section>
-
+-->
   <section id="project" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>PROJECTS <a href="#page-top" title="Home">&#9776;</a></h5>
+          <h5>PROJECT <a href="#page-top" title="Home">&#9776;</a></h5>
 		  <ul class="lead" style="list-style-type:square">
 			<li>Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, Korean NRF, 03/2021-02/2024.</li>
 			<li>Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, SejongIACF, 03/2020-02/2021.</li>
