--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
   </section>
-<!-- 
+<!--
   <section id="member" class="bg-light">
     <div class="container">
       <div class="row">
@@ -187,29 +187,11 @@
     </div>
   </section>
 
-<!--   <section id="others" class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 mx-auto">
-          <h5>AWARDS</h5>
-			  <ul class="lead" style="font-weight: bold;list-style-type:square;">
-			  </ul>
-        </div>
-      </div>
-    </div>
-  </section>
- -->
 
-
-
-  <!-- Footer -->
+  <!-- Footer
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <!-- <p class="m-0 text-center text-white">Copyright &copy; nnDAO 2020</p> -->
-    </div>
-    <!-- /.container -->
   </footer>
-
+  -->
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
