--- a/index.html
+++ b/index.html
@@ -189,10 +189,25 @@
   </section>
 
 
-  <!-- Footer
+
+  Footer
   <footer class="py-5 bg-dark">
-  </footer>
-  -->
+ <!-- Default Statcounter code for PSHH lab https://pshhlab.github.io -->
+<script type="text/javascript">
+var sc_project=12714332; 
+var sc_invisible=0; 
+var sc_security="8873dfa3"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="The number of visistors"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12714332/0/8873dfa3/0/" alt="The number of visistors"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+</footer>
+
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
