--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
   </section>
 
 
-
-  Footer
-  <footer class="py-5 bg-dark">
+  <!-- <footer class="py-5 bg-dark">
  <!-- Default Statcounter code for PSHH lab https://pshhlab.github.io -->
+<p class="lead" style="text-align:center;">
+ 
 <script type="text/javascript">
 var sc_project=12714332; 
 var sc_invisible=0; 
@@ -206,7 +206,8 @@ href="https://statcounter.com/" target="_blank"><img class="statcounter"
 src="https://c.statcounter.com/12714332/0/8873dfa3/0/" alt="The number of visistors"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
-</footer>
+</p>
+
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
