--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
   </section>
 
 
-  <!-- <footer class="py-5 bg-dark">
+  <footer class="py-5 bg-dark">
  <!-- Default Statcounter code for PSHH lab https://pshhlab.github.io -->
-<p class="lead" style="text-align:center;">
- 
+    <div class="container">
+<p class="lead" style="text-align:right;">
 <script type="text/javascript">
 var sc_project=12714332; 
 var sc_invisible=0; 
@@ -207,7 +207,8 @@ src="https://c.statcounter.com/12714332/0/8873dfa3/0/" alt="The number of visist
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
 </p>
-
+</div>
+</footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
