--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
   </section>
-<!-- 
+<!--
   <section id="member" class="bg-light">
     <div class="container">
       <div class="row">
@@ -93,6 +93,7 @@
 				<li><b>Dao NN</b>, Phan TV, Sa'ad U, Kim J, Bauschert T, Do DT, and Cho S, "Securing heterogeneous IoT with intelligent DDoS attack behavior learning", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3084199">IEEE</a>].</li>
 				<li>Lakew DS, Na W, <b>Dao NN</b>, and Cho S, "Aerial energy orchestration for heterogeneous UAV-assisted wireless communications", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3075316">IEEE</a>].</li>
 				<li>Vu DN, <b>Dao NN</b>, Na W, and Cho S, "Dynamic resource orchestration for service capability maximization in fog-enabled connected vehicle networks", <i>IEEE Transactions on Cloud Computing</i>. In press. [<a href="https://doi.org/10.1109/TCC.2020.3001289">IEEE</a>].</li>
+				<li>Sahu SK, Mohapatra DP, Rout JK, Sahoo KS, Pham QV, and <b>Dao NN</b>, "A LSTM-FCNN based multi-class intrusion detection using scalable framework", <i>Computers and Electrical Engineering</i>, vol. 99, p. 107720, 2022. [<a href="https://doi.org/10.1016/j.compeleceng.2022.107720">Elsevier</a>].</li>
 				<li>Do DT, Le AT, Xuan Ha ND, and <b>Dao NN</b>, "Physical layer security for Internet of things via reconfigurable intelligent surface", <i>Future Generation Computer Systems</i>, vol. 126, pp. 330-339, 2022. [<a href="https://doi.org/10.1016/j.future.2021.08.012">Elsevier</a>].</li>
 				<li>Ramasubbareddy S, Ramasamy S, Sahoo KS, Kumar RL, Pham QV, and <b>Dao NN</b>, "CAVMS: Application-aware cloudlet adaption and VM selection framework for multi-cloudlet environment", <i>IEEE Systems Journal</i>, vol. 15, no. 4, pp. 5098-5106, 2021. [<a href="https://doi.org/10.1109/JSYST.2020.3029807">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Ngo DT, Dinh NT, Phan TV, Vo ND, Cho S, and Braun T, "Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems", <i>IEEE Systems Journal</i>, vol. 15, no. 4, pp. 5094-5097, 2021. [<a href="https://doi.org/10.1109/JSYST.2020.3019035">IEEE</a>].</li>
@@ -143,7 +144,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>CONFERENCE PUBLICATION [<a href="#journal" title="Journal publication">&#129093;</a>] [<a href="#patent" title="Patent">&#129095;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
   			  <ol class="lead">
-	  		    <li>Tuong VD, <b>Dao NN</b>, Noh W, Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 1-1, Jeju island, Korea, January 12-15, 2022. [<a href="">IEEE</a>].</li>
+	  		    <li>Tuong VD, <b>Dao NN</b>, Noh W, Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 356-368, Jeju island, Korea, January 12-15, 2022. [<a href="https://doi.org/10.1109/ICOIN53446.2022.9687184">IEEE</a>].</li>
  	  		    <li>Le BL, Lam GH, Nguyen XV, Nguyen TM, Duong QL, Tran QD, Do TH, <b>Dao NN</b>, "A deep learning based traffic sign detection for intelligent transportation systems", <i>International Conference on Computational Data and Social Networks (CSoNet)</i>, pp. 129-137, Montreal, Canada, November 15-17, 2021. [<a href="https://doi.org/10.1007/978-3-030-91434-9_12">Springer</a>].</li>
   				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in HAP-assisted MEC networks", <i>IEEE International Conference on Information and Communication Technology Convergence (ICTC)</i>, pp. 1582-1587, Jeju island, Korea, October 20-22, 2021. [<a href="https://doi.org/10.1109/ICTC52510.2021.9621158">IEEE</a>]. (<b>Best Paper Award</b>)</li>
 	  		    <li>Nguyen XV, Lam GH, Le QN, Duong QL, Nguyen TM, Le BL, Tran QD, Do TH, <b>Dao NN</b>, "Intelligent augmented video streaming services using lightweight QR code scanner", <i>IEEE International Conference on Communication, Networks and Satellite (COMNETSAT)</i>, pp. 103-107, Purwokerto, Indonesia, July 17-18, 2021. [<a href="http://doi.org/10.1109/COMNETSAT53002.2021.9530819">IEEE</a>].</li>
@@ -187,28 +188,27 @@
     </div>
   </section>
 
-<!--   <section id="others" class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 mx-auto">
-          <h5>AWARDS</h5>
-			  <ul class="lead" style="font-weight: bold;list-style-type:square;">
-			  </ul>
-        </div>
-      </div>
-    </div>
-  </section>
- -->
 
-
-
-  <!-- Footer -->
   <footer class="py-5 bg-dark">
+ <!-- Default Statcounter code for PSHH lab https://pshhlab.github.io -->
     <div class="container">
-      <!-- <p class="m-0 text-center text-white">Copyright &copy; nnDAO 2020</p> -->
-    </div>
-    <!-- /.container -->
-  </footer>
+<p class="lead" style="text-align:right;">
+<script type="text/javascript">
+var sc_project=12714332; 
+var sc_invisible=0; 
+var sc_security="8873dfa3"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="The number of visistors"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12714332/0/8873dfa3/0/" alt="The number of visistors"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+</p>
+</div>
+</footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
