--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>BOOK CHAPTER <a href="#page-top" title="Home">&#9776;</a></h5>
-			  <ol class="lead">
+			  <ul class="lead" style="list-style-type:square">
 				<li><b>Dao NN</b>, Dinh NT, Pham QV, Phan TV, Cho S, and Braun T, "Vulnerabilities in fog/edge computing from architectural perspectives", Chapter 8, in <i>Fog/edge computing for security, privacy, and applications</i>, Wu J and Chang W [Eds], Springer, Cham, Switzerland, 2021. [<a href="https://doi.org/10.1007/978-3-030-57328-7_8">Springer</a>].</li>
 				<li><b>Dao NN</b>, Tran QD, Dinh NT, Cho S, and Braun T, "Edge computing architectures", Chapter 2, in <i>Edge computing: Models, technologies and applications</i>, Taheri J and Deng S [Eds], The Institution of Engineering and Technology (IET), London, UK, 2020. [<a href="https://doi.org/10.1049/PBPC033E_ch2">IET</a>].</li>
-			  </ol>
+			  </ul>
         </div>
       </div>
     </div>
@@ -85,8 +85,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9650;</a>] [<a href="#conference" title="Conference publication">&#9660;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
-			  <ol class="lead">
+          <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
+			  <ol reversed class="lead">
 				<li><b>Dao NN</b>, Tran AT, Tu NH, Thanh TT, Bao VNQ, and Cho S, "A contemporary survey on live video streaming from a computation-driven perspective", <i>ACM Computing Surveys</i>. In press. [<a href="https://doi.org/10.1145/3519552">ACM</a>].</li>
 				<li>Lakew DS, Tuong VD, <b>Dao NN</b>, and Cho S, "Adaptive partial offloading and resource harmonization in wireless edge computing-assisted IoE networks", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2022.3153172">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Vu DN, Tran AT, Phan TV, Dustdar S, and Cho S, "On system stability in multitier roadside computing toward an intelligent transportation", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2021.3133283">IEEE</a>].</li>
@@ -144,8 +144,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>CONFERENCE PUBLICATION [<a href="#journal" title="Journal publication">&#9650;</a>] [<a href="#patent" title="Patent">&#9660;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
-  			  <ol class="lead">
+          <h5>CONFERENCE PUBLICATION [<a href="#journal" title="Journal publication">&#9651;</a>] [<a href="#patent" title="Patent">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
+  			  <ol reversed class="lead">
 	  		    <li>Tuong VD, <b>Dao NN</b>, Noh W, and Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 356-368, Jeju island, Korea, January 12-15, 2022. [<a href="https://doi.org/10.1109/ICOIN53446.2022.9687184">IEEE</a>].</li>
  	  		    <li>Le BL, Lam GH, Nguyen XV, Nguyen TM, Duong QL, Tran QD, Do TH, and <b>Dao NN</b>, "A deep learning based traffic sign detection for intelligent transportation systems", <i>International Conference on Computational Data and Social Networks (CSoNet)</i>, pp. 129-137, Montreal, Canada, November 15-17, 2021. [<a href="https://doi.org/10.1007/978-3-030-91434-9_12">Springer</a>].</li>
   				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in HAP-assisted MEC networks", <i>IEEE International Conference on Information and Communication Technology Convergence (ICTC)</i>, pp. 1582-1587, Jeju island, Korea, October 20-22, 2021. [<a href="https://doi.org/10.1109/ICTC52510.2021.9621158">IEEE</a>]. (<b>Best Paper Award</b>)</li>
@@ -176,8 +176,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>PATENT [<a href="#conference" title="Conference publication">&#9650;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
-			  <ol class="lead">
+          <h5>PATENT [<a href="#conference" title="Conference publication">&#9651;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
+			  <ol reversed class="lead">
 				<li>Cho S, Vu DN, and <b>Dao NN</b>, "The method for scheduling tasks in real time using pattern-identification in multitier edge computing and the system thereof", <i>Korean patent KR102068676</i>, January 15, 2020. [<a href="https://doi.org/10.8080/1020180089619?urlappend=en">KIPRIS</a>].</li>
 				<li>Cho S, Vu DN, and <b>Dao NN</b>, "Dynamic resource orchestration for fog-enabled industrial Internet of things networks", <i>Korean patent KR102056894</i>, December 17, 2019. [<a href="https://doi.org/10.8080/1020180088787?urlappend=en">KIPRIS</a>].</li>
 				<li>Cho S and <b>Dao NN</b>, "Method and apparatus for sharing secret key", <i>Korean patent KR101987411</i>, June 11, 2019. [<a href="https://doi.org/10.8080/1020170080723?urlappend=en">KIPRIS</a>].</li>
