--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>BOOK CHAPTER <a href="#page-top" title="Home">&#9776;</a></h5>
-			  <ol class="lead">
+			  <ul class="lead" style="list-style-type:square">
 				<li><b>Dao NN</b>, Dinh NT, Pham QV, Phan TV, Cho S, and Braun T, "Vulnerabilities in fog/edge computing from architectural perspectives", Chapter 8, in <i>Fog/edge computing for security, privacy, and applications</i>, Wu J and Chang W [Eds], Springer, Cham, Switzerland, 2021. [<a href="https://doi.org/10.1007/978-3-030-57328-7_8">Springer</a>].</li>
 				<li><b>Dao NN</b>, Tran QD, Dinh NT, Cho S, and Braun T, "Edge computing architectures", Chapter 2, in <i>Edge computing: Models, technologies and applications</i>, Taheri J and Deng S [Eds], The Institution of Engineering and Technology (IET), London, UK, 2020. [<a href="https://doi.org/10.1049/PBPC033E_ch2">IET</a>].</li>
-			  </ol>
+			  </ul>
         </div>
       </div>
     </div>
@@ -85,14 +85,19 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#129093;</a>] [<a href="#conference" title="Conference publication">&#129095;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
-			  <ol class="lead">
-				<li><b>Dao NN</b>, Vu DN, Tran AT, Phan TV, Dustdar S, and Cho S, "On system stability in multitier roadside computing toward an intelligent transportation", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2021.3133283">IEEE</a>].</li>
-				<li>Nguyen TV, <b>Dao NN</b>, Tuong VD, Noh W, and Cho S, "User-aware and flexible proactive caching using LSTM and ensemble learning in IoT-MEC networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2021.3097768">IEEE</a>].</li>
-				<li>Na W, <b>Dao NN</b>, and Cho S, "Reinforcement-learning-based spatial resource identification for IoT D2D communications", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3087167">IEEE</a>].</li>
+          <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
+			  <ol reversed class="lead">
+				<li><b>Dao NN</b>, Vu DN, Na WS, Hoang TM, Do DT, and Cho S, "Adaptive bitrate streaming in multi-user downlink NOMA edge caching systems with imperfect SIC", <i>Computer Networks</i>. In press. [<a href="https://doi.org/10.1016/j.comnet.2022.109064">Elsevier</a>].</li>
+				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in heterogeneous aerial access IoT networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2022.3161571">IEEE</a>].</li>
+				<li><b>Dao NN</b>, Tran AT, Tu NH, Thanh TT, Bao VNQ, and Cho S, "A contemporary survey on live video streaming from a computation-driven perspective", <i>ACM Computing Surveys</i>. In press. [<a href="https://doi.org/10.1145/3519552">ACM</a>].</li>
+				<li>Lakew DS, Tuong VD, <b>Dao NN</b>, and Cho S, "Adaptive partial offloading and resource harmonization in wireless edge computing-assisted IoE networks", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2022.3153172">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Phan TV, Sa'ad U, Kim J, Bauschert T, Do DT, and Cho S, "Securing heterogeneous IoT with intelligent DDoS attack behavior learning", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3084199">IEEE</a>].</li>
 				<li>Lakew DS, Na W, <b>Dao NN</b>, and Cho S, "Aerial energy orchestration for heterogeneous UAV-assisted wireless communications", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2021.3075316">IEEE</a>].</li>
 				<li>Vu DN, <b>Dao NN</b>, Na W, and Cho S, "Dynamic resource orchestration for service capability maximization in fog-enabled connected vehicle networks", <i>IEEE Transactions on Cloud Computing</i>. In press. [<a href="https://doi.org/10.1109/TCC.2020.3001289">IEEE</a>].</li>
+        <li><b>Dao NN</b>, Vu DN, Tran AT, Phan TV, Dustdar S, and Cho S, "On system stability in multitier roadside computing toward an intelligent transportation", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 9, no. 3, pp. 1128-1138, 2022. [<a href="https://doi.org/10.1109/TNSE.2021.3133283">IEEE</a>].</li>
+				<li>Truong TP, <b>Dao NN</b>, and Cho S, "HAMEC-RSMA: Enhanced aerial computing systems with rate splitting multiple access", <i>IEEE Access</i>, vol. 10, pp. 52398-52409, 2022. [<a href="https://doi.org/0.1109/ACCESS.2022.3173125">IEEE</a>].</li>
+				<li>Na W, <b>Dao NN</b>, and Cho S, "Reinforcement-learning-based spatial resource identification for IoT D2D communications", <i>IEEE Systems Journal</i>, vol. 16, no. 1, pp. 1068-1079, 2022. [<a href="https://doi.org/10.1109/JSYST.2021.3087167">IEEE</a>].</li>
+				<li>Nguyen TV, <b>Dao NN</b>, Tuong VD, Noh W, and Cho S, "User-aware and flexible proactive caching using LSTM and ensemble learning in IoT-MEC networks", <i>IEEE Internet of Things Journal</i>, vol. 9, no. 5, pp. 3251-3269, 2022. [<a href="https://doi.org/10.1109/JIOT.2021.3097768">IEEE</a>].</li>
 				<li>Sahu SK, Mohapatra DP, Rout JK, Sahoo KS, Pham QV, and <b>Dao NN</b>, "A LSTM-FCNN based multi-class intrusion detection using scalable framework", <i>Computers and Electrical Engineering</i>, vol. 99, p. 107720, 2022. [<a href="https://doi.org/10.1016/j.compeleceng.2022.107720">Elsevier</a>].</li>
 				<li>Do DT, Le AT, Xuan Ha ND, and <b>Dao NN</b>, "Physical layer security for Internet of things via reconfigurable intelligent surface", <i>Future Generation Computer Systems</i>, vol. 126, pp. 330-339, 2022. [<a href="https://doi.org/10.1016/j.future.2021.08.012">Elsevier</a>].</li>
 				<li>Ramasubbareddy S, Ramasamy S, Sahoo KS, Kumar RL, Pham QV, and <b>Dao NN</b>, "CAVMS: Application-aware cloudlet adaption and VM selection framework for multi-cloudlet environment", <i>IEEE Systems Journal</i>, vol. 15, no. 4, pp. 5098-5106, 2021. [<a href="https://doi.org/10.1109/JSYST.2020.3029807">IEEE</a>].</li>
@@ -142,16 +147,16 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>CONFERENCE PUBLICATION [<a href="#journal" title="Journal publication">&#129093;</a>] [<a href="#patent" title="Patent">&#129095;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
-  			  <ol class="lead">
-	  		    <li>Tuong VD, <b>Dao NN</b>, Noh W, Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 356-368, Jeju island, Korea, January 12-15, 2022. [<a href="https://doi.org/10.1109/ICOIN53446.2022.9687184">IEEE</a>].</li>
- 	  		    <li>Le BL, Lam GH, Nguyen XV, Nguyen TM, Duong QL, Tran QD, Do TH, <b>Dao NN</b>, "A deep learning based traffic sign detection for intelligent transportation systems", <i>International Conference on Computational Data and Social Networks (CSoNet)</i>, pp. 129-137, Montreal, Canada, November 15-17, 2021. [<a href="https://doi.org/10.1007/978-3-030-91434-9_12">Springer</a>].</li>
+          <h5>CONFERENCE PUBLICATION [<a href="#journal" title="Journal publication">&#9651;</a>] [<a href="#patent" title="Patent">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
+  			  <ol reversed class="lead">
+	  		    <li>Tuong VD, <b>Dao NN</b>, Noh W, and Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 356-368, Jeju island, Korea, January 12-15, 2022. [<a href="https://doi.org/10.1109/ICOIN53446.2022.9687184">IEEE</a>].</li>
+ 	  		    <li>Le BL, Lam GH, Nguyen XV, Nguyen TM, Duong QL, Tran QD, Do TH, and <b>Dao NN</b>, "A deep learning based traffic sign detection for intelligent transportation systems", <i>International Conference on Computational Data and Social Networks (CSoNet)</i>, pp. 129-137, Montreal, Canada, November 15-17, 2021. [<a href="https://doi.org/10.1007/978-3-030-91434-9_12">Springer</a>].</li>
   				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in HAP-assisted MEC networks", <i>IEEE International Conference on Information and Communication Technology Convergence (ICTC)</i>, pp. 1582-1587, Jeju island, Korea, October 20-22, 2021. [<a href="https://doi.org/10.1109/ICTC52510.2021.9621158">IEEE</a>]. (<b>Best Paper Award</b>)</li>
-	  		    <li>Nguyen XV, Lam GH, Le QN, Duong QL, Nguyen TM, Le BL, Tran QD, Do TH, <b>Dao NN</b>, "Intelligent augmented video streaming services using lightweight QR code scanner", <i>IEEE International Conference on Communication, Networks and Satellite (COMNETSAT)</i>, pp. 103-107, Purwokerto, Indonesia, July 17-18, 2021. [<a href="http://doi.org/10.1109/COMNETSAT53002.2021.9530819">IEEE</a>].</li>
-	  		    <li>Do TH, Tran DK, Hoang DQ, Vuong D, Hoang TM, <b>Dao NN</b>, Lee C, Cho S, "A novel algorithm for estimating fast-moving vehicle speed in intelligent transport systems", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 499-503, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9333970">IEEE</a>].</li>
-	  		    <li>Pham QD, Do TH, <b>Dao NN</b>, Na W, Lee C, Cho S, "A feasible study of cube sensing organization map for cognitive spectrum allocation", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 858-863, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9333998">IEEE</a>].</li>
-	  		    <li>Tran AT, Lakew DS, Nguyen TV, Tuong VD, Truong TP, <b>Dao NN</b>, Cho S, "Hit ratio and latency optimization for caching systems: A survey", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 577-581, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9334019">IEEE</a>].</li>
-	  		    <li>Do TH, Tran DK, Hoang DQ, Pham MQ, Pham QD, <b>Dao NN</b>, Lee C, Cho S, "Night-time vehicle distance estimation using camera geometry and deep learning", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 853-857, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9333922">IEEE</a>].</li>
+	  		    <li>Nguyen XV, Lam GH, Le QN, Duong QL, Nguyen TM, Le BL, Tran QD, Do TH, and <b>Dao NN</b>, "Intelligent augmented video streaming services using lightweight QR code scanner", <i>IEEE International Conference on Communication, Networks and Satellite (COMNETSAT)</i>, pp. 103-107, Purwokerto, Indonesia, July 17-18, 2021. [<a href="http://doi.org/10.1109/COMNETSAT53002.2021.9530819">IEEE</a>].</li>
+	  		    <li>Do TH, Tran DK, Hoang DQ, Vuong D, Hoang TM, <b>Dao NN</b>, Lee C, and Cho S, "A novel algorithm for estimating fast-moving vehicle speed in intelligent transport systems", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 499-503, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9333970">IEEE</a>].</li>
+	  		    <li>Pham QD, Do TH, <b>Dao NN</b>, Na W, Lee C, and Cho S, "A feasible study of cube sensing organization map for cognitive spectrum allocation", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 858-863, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9333998">IEEE</a>].</li>
+	  		    <li>Tran AT, Lakew DS, Nguyen TV, Tuong VD, Truong TP, <b>Dao NN</b>, and Cho S, "Hit ratio and latency optimization for caching systems: A survey", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 577-581, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9334019">IEEE</a>].</li>
+	  		    <li>Do TH, Tran DK, Hoang DQ, Pham MQ, Pham QD, <b>Dao NN</b>, Lee C, and Cho S, "Night-time vehicle distance estimation using camera geometry and deep learning", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 853-857, Jeju island, Korea, January 13-16, 2021. [<a href="https://doi.org/10.1109/ICOIN50884.2021.9333922">IEEE</a>].</li>
   				<li>Tran AT, Nguyen TV, Tuong VD, <b>Dao NN</b>, and Cho S, "On stalling minimization of adaptive bitrate video services in edge caching systems", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 115-116, Barcelona, Spain, January 7-10, 2020. [<a href="https://doi.org/10.1109/ICOIN48656.2020.9016606">IEEE</a>].</li>
   				<li>Dinh NT, <b>Dao NN</b>, and Kim Y, "Sensing content correlation-aware in-network caching scheme at the edge for Internet of Things", <i>ACM Conference on Information-Centric Networking (ICN)</i>, pp. 161-162, Macao, China, September 24-26, 2019. [<a href="https://doi.org/10.1145/3357150.3357413">ACM</a>].</li>
   				<li><b>Dao NN</b>, Na W, Lee Y, Vu DN, and Cho S, "Prefetched asymmetric authentication for infrastructureless D2D communications: feasibility study and analysis", <i>IEEE International Conference on Information and Communication Technology Convergence (ICTC)</i>, pp. 1053-1054, Jeju island, Korea, October 17-19, 2018. [<a href="https://doi.org/10.1109/ICTC.2018.8539475">IEEE</a>].</li>
@@ -174,8 +179,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>PATENT [<a href="#conference" title="Conference publication">&#129093;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
-			  <ol class="lead">
+          <h5>PATENT [<a href="#conference" title="Conference publication">&#9651;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
+			  <ol reversed class="lead">
 				<li>Cho S, Vu DN, and <b>Dao NN</b>, "The method for scheduling tasks in real time using pattern-identification in multitier edge computing and the system thereof", <i>Korean patent KR102068676</i>, January 15, 2020. [<a href="https://doi.org/10.8080/1020180089619?urlappend=en">KIPRIS</a>].</li>
 				<li>Cho S, Vu DN, and <b>Dao NN</b>, "Dynamic resource orchestration for fog-enabled industrial Internet of things networks", <i>Korean patent KR102056894</i>, December 17, 2019. [<a href="https://doi.org/10.8080/1020180088787?urlappend=en">KIPRIS</a>].</li>
 				<li>Cho S and <b>Dao NN</b>, "Method and apparatus for sharing secret key", <i>Korean patent KR101987411</i>, June 11, 2019. [<a href="https://doi.org/10.8080/1020170080723?urlappend=en">KIPRIS</a>].</li>
