--- a/nndao.html
+++ b/nndao.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>BIOGRAPHY</h5>
-          <p class="lead">Nhu-Ngoc Dao is an Assistant Professor at the Department of Computer Science and Engineering, Sejong University, Seoul, Republic of Korea. He received his M.S. and Ph.D. degrees in computer science at the School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea, in 2016 and 2019, respectively. He received the B.S. degree in electronics and telecommunications from the Posts and Telecommunications Institute of Technology, Hanoi, Viet Nam, in 2009. Prior to joining the Sejong University, he was a postdoc researcher at the Institute of Computer Science, University of Bern, Switzerland from 2019 to 2020. He is an Editor of the Scientific Reports. His research interests include network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things. Dr. Dao is a Senior Member of IEEE. Contact him at nndao@sejong.ac.kr.</p>
+          <p class="lead">Nhu-Ngoc Dao is an Assistant Professor at the Department of Computer Science and Engineering, Sejong University, Seoul, Republic of Korea. He received his M.S. and Ph.D. degrees in computer science at the School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea, in 2016 and 2019, respectively. He received the B.S. degree in electronics and telecommunications from the Posts and Telecommunications Institute of Technology, Hanoi, Viet Nam, in 2009. Prior to joining the Sejong University, he was a postdoc researcher at the Institute of Computer Science, University of Bern, Switzerland from 2019 to 2020. He is an Editor of the Scientific Reports. His research interests include network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things. Dr. Dao is a Senior Member of IEEE and a Professional Member of ACM. Contact him at nndao@sejong.ac.kr.</p>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
 					<li>Editor: <a href="https://www.nature.com/srep/about/editors#electrical-engineering">Scientific Reports</a>;</li>
 					<li>SI guest editor:
 						<ul class="lead">
-							<li>Wireless Communications and Mobile Computing: <a href="https://www.hindawi.com/journals/wcmc/si/781378/">[1]</a>, <a href="http://downloads.hindawi.com/journals/wcmc/si/193986.pdf">[2]</a></li> 
+							<li>Wireless Communications and Mobile Computing: <a href="https://www.hindawi.com/journals/wcmc/si/781378/">[1]</a>, <a href="http://downloads.hindawi.com/journals/wcmc/si/193986.pdf">[2]</a></li>
 							<li>Mobile Information Systems: <a href="https://www.hindawi.com/journals/misy/si/175218/">[1]</a></li>
 							<li>Electronics: <a href="https://www.mdpi.com/journal/electronics/special_issues/UIC_for_B5G_6G">[1]</a></li>
 						</ul>
@@ -109,19 +109,19 @@
 					<li><i>Excellent Vietnamese students in Korea Scholarship</i>, awarded by Hanshin Corp., 2017;</li>
 					<li><i>CAYSS Scholarship for Ph.D. and M.S. courses</i>, awarded by Chung-Ang University, 2014-2017;</li>
 					<li><i>Regular Scholarship</i>, awarded by Posts and Telecommunications Institute of Technology, 2006-2009.</li>
-				  </ul>				
+				  </ul>
 				</li>
 				<li>Industrial certificates:
 				  <ul class="lead">
 					<li>CCNP (2010), CCNA (2008), and CWNA (2008).</li>
-				  </ul>				
+				  </ul>
 				</li>
 				<li>Social activities:
 				  <ul class="lead">
 					<li>Cycling - Korean grand slam, cross country, and 4 rivers trails;</li>
 					<li>Climbing - Jeju Hallasan Mt. trails;</li>
 					<li>Running - Seoul Marathon 03/2019, Brussels Marathon 10/2019, Ljubljana Marathon 10/2019.</li>
-				  </ul>				
+				  </ul>
 				</li>
 			  </ul>
         </div>
