--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li>Na W, Kim N, <b>Dao NN</b>, and Cho S, "Machine learning-based communication failure identification scheme for directional industrial IoT networks", <i>IEEE Systems Journal</i>. In press. [<a href="">IEEE</a>].</li>
         <li><b>Dao NN</b>, Do TH, Cho S, and Dustdar S, "Information revealed by vision: A review on the next-generation OCC standard for AIoV", <i>IT Professional</i>. In press. [<a href="https://doi.org/10.1109/MITP.2022.3180354">IEEE</a>].</li>
 				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in heterogeneous aerial access IoT networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2022.3161571">IEEE</a>].</li>
 				<li><b>Dao NN</b>, Tran AT, Tu NH, Thanh TT, Bao VNQ, and Cho S, "A contemporary survey on live video streaming from a computation-driven perspective", <i>ACM Computing Surveys</i>. In press. [<a href="https://doi.org/10.1145/3519552">ACM</a>].</li>
