--- a/nndao.html
+++ b/nndao.html
@@ -23,7 +23,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>Nhu-Ngoc DAO</h1>
-      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Republic of Korea.<br>[<a href="https://publons.com/researcher/1405959/nhu-ngoc-dao/">ResearcherID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56810883300">ScopusID</a>, <a href="https://scholar.google.co.kr/citations?hl=en&user=rWmFrIgAAAAJ&view_op=list_works&sortby=pubdate">GoogleScholar</a>, <a href="https://www.researchgate.net/profile/Nhu_Ngoc_Dao/publications">Researchgate</a>]</p>
+      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea.<br>[<a href="https://publons.com/researcher/1405959/nhu-ngoc-dao/">ResearcherID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56810883300">ScopusID</a>, <a href="https://scholar.google.co.kr/citations?hl=en&user=rWmFrIgAAAAJ&view_op=list_works&sortby=pubdate">GoogleScholar</a>, <a href="https://www.researchgate.net/profile/Nhu_Ngoc_Dao/publications">Researchgate</a>]</p>
     </div>
   </header>
 
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>BIOGRAPHY</h5>
-          <p class="lead">Nhu-Ngoc Dao is an Assistant Professor at the Department of Computer Science and Engineering, Sejong University, Seoul, Republic of Korea. He received his M.S. and Ph.D. degrees in computer science at the School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea, in 2016 and 2019, respectively. He received the B.S. degree in electronics and telecommunications from the Posts and Telecommunications Institute of Technology, Hanoi, Viet Nam, in 2009. Prior to joining the Sejong University, he was a postdoc researcher at the Institute of Computer Science, University of Bern, Switzerland from 2019 to 2020. He is an Editor of the Scientific Reports. His research interests include network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things. Dr. Dao is a Senior Member of IEEE and a Professional Member of ACM. Contact him at nndao@sejong.ac.kr.</p>
+          <p class="lead">Nhu-Ngoc Dao is an Assistant Professor at the Department of Computer Science and Engineering, Sejong University, Seoul, Korea. He received his M.S. and Ph.D. degrees in computer science at the School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea, in 2016 and 2019, respectively. He received the B.S. degree in electronics and telecommunications from the Posts and Telecommunications Institute of Technology, Hanoi, Viet Nam, in 2009. Prior to joining the Sejong University, he was a postdoc researcher at the Institute of Computer Science, University of Bern, Switzerland from 2019 to 2020. He is an Editor of the Scientific Reports. His research interests include network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things. Dr. Dao is a Senior Member of IEEE and a Professional Member of ACM. Contact him at nndao@sejong.ac.kr.</p>
         </div>
       </div>
     </div>
@@ -44,11 +44,11 @@
         <div class="col-lg-12 mx-auto">
           <h5>PROFESSIONAL TIMELINE</h5>
 		  <ul class="lead" style="list-style-type:square">
-			<li><i>03.2020 - present:</i> Assistant professor, Department of Computer Science and Engineering, Sejong University, Seoul, Republic of Korea.</li>
+			<li><i>03.2020 - present:</i> Assistant professor, Department of Computer Science and Engineering, Sejong University, Seoul, Korea.</li>
 			<li><i>09.2019 - 02.2020:</i> Postdoc researcher, Institute of Computer Science, University of Bern, Bern, Switzerland.</li>
 			<li><i>07.2019 - 08.2019:</i> Visiting researcher, CDSC Center, University of Newcastle, NSW, Australia.</li>
-			<li><i>03.2016 - 08.2019:</i> Ph.D., School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea.</li>
-			<li><i>03.2014 - 02.2016:</i> M.S., School of Computer Science and Engineering, Chung-Ang University, Seoul, Republic of Korea.</li>
+			<li><i>03.2016 - 08.2019:</i> Ph.D., School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea.</li>
+			<li><i>03.2014 - 02.2016:</i> M.S., School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea.</li>
 			<li><i>01.2009 - 02.2014:</i> Engineer, Global Telecommunication Corporation, Hanoi, Vietnam.</li>
 			<li><i>09.2004 - 12.2008:</i> B.S., Posts and Telecommunications Institute of Technology, Hanoi, Vietnam.</li>
 		  </ul>
