--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <div class="col-lg-12 mx-auto">
           <h5>PROJECT <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
-            <li>Development of End-to-End 8 Ultra-Communication and Networking Technologies, Korean IITP, 07/2022-12/2029.</li>
-      			<li>Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, Korean NRF, 03/2021-02/2024.</li>
-      			<li>Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, SejongIACF, 03/2020-02/2021.</li>
+            <li>Development of end-to-end 8 ultra-communication and networking technologies, IITP (Korea), 07/2022-12/2029.</li>
+      			<li>Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, NRF (Korea), 03/2021-02/2024.</li>
+      			<li>Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, IACF (SJU), 03/2020-02/2021.</li>
       		  </ul>
         </div>
       </div>
@@ -91,6 +91,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li><b>Nguyen TV</b>, Tran AT, <b>Dao NN</b>, Moon H, and Cho S, "Information fusion on delivery: A survey on the roles of mobile edge caching systems", <i>Information Fusion</i>. In press. [<a href="">Elsevier</a>].</li>
         <li>Na W, Kim N, <b>Dao NN</b>, and Cho S, "Machine learning-based communication failure identification scheme for directional industrial IoT networks", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2022.3192066">IEEE</a>].</li>
         <li><b>Dao NN</b>, Do TH, Cho S, and Dustdar S, "Information revealed by vision: A review on the next-generation OCC standard for AIoV", <i>IT Professional</i>. In press. [<a href="https://doi.org/10.1109/MITP.2022.3180354">IEEE</a>].</li>
 				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in heterogeneous aerial access IoT networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2022.3161571">IEEE</a>].</li>
