--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>(BOOK) CHAPTER <a href="#page-top" title="Home">&#9776;</a></h5>
+          <h5>BOOK (CHAPTER) <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ul class="lead" style="list-style-type:square">
         <li>Nguyen NT, <b>Dao NN</b>, Pham QD, and Le HA [Eds], "Intelligence of things: Technologies and applications - Proceedings of the first international conference on intelligence of things (ICIT 2022)", Springer, Cham, Switzerland, 2022. [<a href="https://doi.org/10.1007/978-3-031-15063-0">Springer</a>].</li>
 				<li><b>Dao NN</b>, Dinh NT, Pham QV, Phan TV, Cho S, and Braun T, "Vulnerabilities in fog/edge computing from architectural perspectives", Chapter 8, in <i>Fog/edge computing for security, privacy, and applications</i>, Wu J and Chang W [Eds], Springer, Cham, Switzerland, 2021. [<a href="https://doi.org/10.1007/978-3-030-57328-7_8">Springer</a>].</li>
