--- a/index.html
+++ b/index.html
@@ -206,6 +206,22 @@
     </div>
   </section>
 
+  <section id="innumber" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+          <h5>PSHH in numbers <a href="#page-top" title="Home">&#9776;</a></h5>
+      		  <ul class="lead" style="list-style-type:square">
+      			<li>Number of publishers: 10</li>
+      			<li>Number of journals: 32</li>
+            <li>Number of conferences: 8</li>
+            <li>Number of collaborators: 116 (coauthors) or 31 (institutions) or 11 (countries)</li>
+      		  </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <footer class="py-5 bg-dark">
  <!-- Default Statcounter code for PSHH lab https://pshhlab.github.io -->
